--- a/apps/results-summary/package.json
+++ b/apps/results-summary/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "docs",
+  "name": "results-summary",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
