--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
               run: pnpm install
     
             - name: Build
-              run: pnpm build
+              run: pnpm lint
     
             - name: Test
               run: pnpm test
